chore: Update Cargo.toml and add Guessable trait implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,10 @@
 name = "rowdle"
 version = "0.1.0"
 edition = "2021"
-
+license = "MIT"
+keywords = ["wordle", "game", "cli"]
+description = "A Wordle backend in Rust"
+categories = ["game-logic", "cli"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
